--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -156,8 +156,6 @@ nav>a:hover {
 }
 .chat_container {
     width:80vw;
-    /*height:500px;*/
-    border: 1px solid green;
 }
 .chat-text {
     display:block;
@@ -165,14 +163,24 @@ nav>a:hover {
     border: 1px solid black;
     background-color: #f0acb1;
     margin: 10px 0;
+    border-radius: 6px;
+    line-height: 1.5;
 }
 .chat_message {
     width:100%;
-    line-height: 1.2;
     border:1px solid black;
     margin: 10px 0;
+    padding:10px;
 }
 .chat_button {
     width:100%;
     margin:10px 0;
+}
+.chat_username {
+    font-weight: bold;
+    font-size: 1.2em;
+    padding:10px;
+}
+.chat_display {
+    padding:10px;
 }
