--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -10,10 +10,6 @@ label {
     line-height: 2em;
 }
 
-form {
-    margin: 0 15px;
-}
-
 hr {
     border: 0;
     height: 1px;
@@ -151,31 +147,22 @@ nav>a:hover {
     padding: 10px;
     background-color: #262626;
 }
-
 #logout:hover {
     background-color: #484848;
 }
 .chat_container {
     width:80vw;
-}
-.chat-text {
-    display:block;
-    width:100%;
-    border: 1px solid black;
-    background-color: #f0acb1;
-    margin: 10px 0;
-    border-radius: 6px;
-    line-height: 1.5;
+    border:1px;
 }
 .chat_message {
     width:100%;
     border:1px solid black;
-    margin: 10px 0;
+    margin-top: 10px;
     padding:10px;
 }
 .chat_button {
     width:100%;
-    margin:10px 0;
+
 }
 .chat_username {
     font-weight: bold;
@@ -184,4 +171,26 @@ nav>a:hover {
 }
 .chat_display {
     padding:10px;
+}
+.chat_position {
+    border: 0;
+    width: 90vw;
+    height: 80vh;
+    margin:4vh auto 12vh auto;
+    padding:0;
+    overflow: auto;
+}
+.chat-text {
+    display:block;
+    width:99%;
+    border: 1px solid black;
+    background-color: #ecf1ee;
+    margin: 10px 0;
+    border-radius: 6px;
+    line-height: 1.5;
+}
+.chat_input_position {
+    position:absolute;
+    width:100%;
+    bottom: 0;
 }
